syntax = "proto3";

package asset;
import "google/protobuf/timestamp.proto";

option go_package = "./pkg/asset/pb";

service AssetService {
  rpc CreateAsset(CreateAssetRequest) returns (CreateAssetResponse) {}
  rpc FindOne(FindOneRequest) returns (FindOneResponse) {}
  rpc DecreaseStock(DecreaseStockRequest) returns (DecreaseStockResponse) {}
}

// CreateProduct

message CreateAssetRequest {
  string name = 1;
  string sku = 2;
  int64 stock = 3;
  int64 price = 4;
  google.protobuf.Timestamp bought_date= 5;
}

message CreateAssetResponse {
  int64 status = 1;
  string error = 2;
  string id = 3;
}

// FindOne

message FindOneData {
  string id = 1;
  string name = 2;
  string sku = 3;
  int64 stock = 4;
  int64 price = 5;
  google.protobuf.Timestamp bought_date = 6;
}

message FindOneRequest { string id = 1; }

message FindOneResponse {
  int64 status = 1;
  string error = 2;
  FindOneData data = 3;
}

// DecreaseStock

message DecreaseStockRequest {
  string id = 1;
}

message DecreaseStockResponse {
  string status = 1;
  string error = 2;
}